# PASTIS-ipuma

./: .gitignore  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  env.source  hist.ipynb  install-deps.sh  launch.sh  reconfigure.sh  runpastis
inc/: DistPWRunner.hpp  ParallelOps.hpp
inc/align/: IPumaAligner.hpp  PWAlign.hpp
src/: DistPWRunner.cpp  logger.cpp  main.cpp  sim_search.cpp
src/align/: IPumaAligner.cpp  SeqanFullAligner.cpp  SeqanXdropAligner.cpp
src/ipuma-sw/: ipu_base.cpp  ipu_base.h  ipu_batch_affine.cpp  ipu_batch_affine.h
